# tsh

./: .gitignore  README.md  pyproject.toml  tsh  tsh.py
newlib/: comparison.py  define.py  math_tsh.py  objects.py  sounds.py  tools.py
src/: consts.py  core.py  draw.py  external.py  modules.py  new_module_system.py  repl.py
stdlib/: comparison.py  comporations.py  define.py  http.py  math.py  math_tsh.py  objects.py  sounds.py  stdvar.py  strtools.py  tools.py  toolslib.py
