[project]
name = "tsh"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur",email = "arthuras.work@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "questionary (>=2.1.1,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
